[package]
name = "oxio"
version = "0.1.3"
authors = ["Victor Gama <hey@vito.io>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/heyvito/oxio"
repository = "https://github.com/heyvito/oxio"
license-file = "LICENSE"
keywords = ["snippet", "snippet-manager", "clipboard", "cli"]
categories = ["command-line-utilities"]
description = "A nimble snippet manager"

[dependencies]
atty = "0.2"
clipboard = "0.5.0"
colored = "2"
edit = "0.1.2"
git2 = "0.13.15"
rand = "0.8.1"
sha-1 = "0.9.2"
shellexpand = "2.1.0"
